Resolving Runtime Errors

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,11 +23,11 @@ html(ng-app="pmpApp")
     block content
     script(src="/scripts/services/formmodelservice.js")
     script(src="/scripts/services/responsemessageservice.js")
-    script(src="/scripts/controllers/mainController.js")
-    script(src="/scripts/controllers/loginController.js")
-    script(src="/scripts/controllers/registerController.js")
-    script(src="/scripts/controllers/forgotController.js")
-    script(src="/scripts/controllers/pmpApp.user.js")
-    script(src="/scripts/controllers/userController.js")
-    script(src="/scripts/controllers/mpuserController.js")
-    script(src="/scripts/controllers/nmpuserController.js")
+    script(src="/modules/index/mainController.js")
+    script(src="/modules/index/loginController.js")
+    script(src="/modules/index/registerController.js")
+    script(src="/modules/index/forgotController.js")
+    script(src="/modules/user/pmpApp.user.js")
+    script(src="/modules/user/userController.js")
+    script(src="/modules/user/mpuserController.js")
+    script(src="/modules/user/nmpuserController.js")
