--- a/views/muser.pug
+++ b/views/muser.pug
@@ -12,11 +12,11 @@ block content
 					a(class="log btn btn-primary" ng-click="LogOut()") Logout
 		div(class="row")
 			div(class="sideNav col-sm-3")
-				a(href="#/Profile"  class="sideNavAnchor")
+				a(href="/users#/Profile"  class="sideNavAnchor")
 					div(id="Profile" class="sideNavOptions myactive") My Profile
-				a(href="#/SeeAvailability"  class="sideNavAnchor")
+				a(href="/users#/SeeAvailability"  class="sideNavAnchor")
 					div(id="SeeAvailability" class="sideNavOptions") See Availability
-				a(href="#/RaiseRequirement"  class="sideNavAnchor")
+				a(href="/users#/RaiseRequirement"  class="sideNavAnchor")
 					div(id="RaiseRequirement"  class="sideNavOptions") Raise Requirement
 			div(class="col-sm-9" ng-view)
 		div(class="myFooter")
